add: drag function; refactor: page items, component.ts, dialog inputs; bug: drag function

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,23 @@ label {
   color: var(--text-accent-color);
 }
 
+dialog {
+  border: 0;
+}
+
+button {
+  background: transparent;
+  border: 0;
+  outline: 0;
+}
+
+input,
+textarea {
+  background-color: var(--text-edit-bg-color);
+  color: var(--smokywhite);
+  font-size: 1.5em;
+}
+
 * {
   outline: 0;
   box-sizing: border-box;
@@ -71,7 +88,8 @@ body {
   justify-content: center;
 }
 
-.create-button {
+.create-button,
+.dialog-submit {
   margin: 0.1em 0.2em;
   text-align: center;
   user-select: none;
@@ -84,7 +102,6 @@ body {
   border-color: var(--accent-color);
   border-radius: 2px;
 }
-
 .document {
   height: 100%;
   overflow-y: auto;
@@ -112,6 +129,7 @@ body {
   text-align: center;
 }
 
+/* -- Dialog -- */
 .dialog {
   display: flex;
   align-items: center;
@@ -124,7 +142,6 @@ body {
   height: 100%;
   font-size: 1.2rem;
   background-color: var(--document-bg-color);
-  border: 0;
 }
 
 .dialog-container {
@@ -132,9 +149,132 @@ body {
   flex-direction: column;
   padding: 0.4em;
   width: 32em;
-  background: var(--bg-accent-color);
   background: var(--component-bg-gradient);
   border: 1px solid var(--border-color);
   border-radius: 0.5rem;
   box-shadow: 2px 2px 20px var(--shadow-color);
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+}
+
+.close {
+  align-self: flex-end;
+  padding: 0.2rem;
+  color: var(--accent-color);
+  font-size: 28px;
+  font-weight: bold;
+  margin: 3px;
+  transition: color 250ms ease;
+}
+
+.close:hover,
+.close:focus {
+  transform: scale(1.5);
+  color: var(--shadow-color);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.dialog-submit {
+  align-self: flex-end;
+  padding: 0.5em 1.5em;
+}
+
+/* -- PAGE ITEM -- */
+.page {
+  padding: 0;
+}
+
+.page-item {
+  margin: 1.5em;
+  box-shadow: 2px 2px 6px var(--shadow-color);
+  background: var(--component-bg-gradient);
+}
+
+.page-item-controls {
+  padding-right: 0.5em;
+}
+
+.page-item-title {
+  color: var(--text-accent-color);
+}
+
+.page-item-body {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* -- Image & Video -- */
+.video,
+.image {
+  display: flex;
+  width: 100%;
+  height: 250px;
+}
+
+.video-player,
+.image-holder {
+  flex: 60% 1 1;
+}
+
+.video-title,
+.image-title {
+  flex: 40% 1 1;
+  margin-left: 0.5em;
+  align-self: center;
+}
+
+.video-iframe {
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
+.image-thumbnail {
+  width: 100%;
+  height: 100%;
+}
+
+/* -- Note -- */
+.note {
+  padding: 0.5em;
+}
+/* -- TODO -- */
+.todo {
+  padding: 0.5em;
+}
+
+.todo-list,
+.todo-label {
+  padding: 1em;
+  color: var(--smokywhite);
+}
+
+/* ---- Drag and Drop ---- */
+
+.mute-children * {
+  pointer-events: none;
+}
+
+.lifted {
+  animation: drag_start 250ms;
+  opacity: 0.2;
+}
+
+@keyframes drag_start {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
+  }
+}
+
+.drop-area {
+  border: 2px solid var(--accent-color);
 }
